--- a/04-Extra/03.Testimonials.md
+++ b/04-Extra/03.Testimonials.md
@@ -2,26 +2,26 @@
 **Interns, Be ready for your video testimonial!
 Please cover the points below in 1–2 minutes:**
 
-1. Start by introducing yourself: *What’s your name, your college, your branch/stream, and your current semester or year?*
+1. Start by introducing yourself: *What’s your name,?*
 
 2. Say this line clearly:
-   **“I am currently doing my internship at The One Branding as a Frontend Developer Intern.”**
+   **“I  have completed internship-traning at The One Branding as a Frontend Developer Intern.”**
 
-3. Share what you’ve learned during the internship — for example:
+3. Share what you’ve learned during the internship-training — for example:
    *HTML, CSS, JavaScript, VS Code, Git, GitHub.*
 
 4. Talk about the project you built:
    *What’s the project title? What is it about? What did you create or learn while making it?*
 
-5. Describe your overall experience during the internship.
+5. Describe your overall experience during the internship-training.
 
 6. Talk a bit about the company environment —
    *How did it feel working at The One Branding?*
 
-7. Share a few words about your mentor, **Yasin Vahora** —
-   *How did he guide or support you during the internship?*
+7. Share a few words about your mentor, **** —
+   *How did he guide or support you during the internship-training?*
 
-8. End by expressing your gratitude to **The One Branding** for giving you the internship opportunity.
+8. End by expressing your gratitude to **The One Branding** for giving you the internship-training opportunity.
 
 ---
 ---
